--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.15.0",
+    "@ionic-native/email-composer": "^4.15.0",
     "@ionic-native/local-notifications": "^4.15.0",
+    "@ionic-native/social-sharing": "^4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
     "cordova-ios": "4.5.5",
     "cordova-plugin-app-event": "1.2.1",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-email": "1.2.7",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -54,7 +57,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "de.appplant.cordova.plugin.local-notification": {}
+      "de.appplant.cordova.plugin.local-notification": {},
+      "cordova-plugin-email": {}
     },
     "platforms": [
       "ios"
