--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/call-number": "^4.15.0",
     "@ionic-native/camera": "^4.15.0",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/email-composer": "^4.15.0",
     "@ionic-native/local-notifications": "^4.15.0",
+    "@ionic-native/network": "^4.15.0",
     "@ionic-native/social-sharing": "^4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
+    "call-number": "1.0.1",
     "cordova-ios": "4.5.5",
     "cordova-plugin-app-event": "1.2.1",
     "cordova-plugin-camera": "4.0.3",
@@ -35,6 +38,7 @@
     "cordova-plugin-email": "1.2.7",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
+    "cordova-plugin-network-information": "2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -61,7 +65,9 @@
       "cordova-plugin-ionic-keyboard": {},
       "de.appplant.cordova.plugin.local-notification": {},
       "cordova-plugin-email": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-network-information": {},
+      "mx.ferreyra.callnumber": {}
     },
     "platforms": [
       "ios"
